website: How to install Elvish and use it as the default shell.

--- a/website/get/prelude.css
+++ b/website/get/prelude.css
@@ -1,10 +1,8 @@
 .notice {
     text-align: center;
-}
-
-tr:nth-child(even) {
     background-color: #ddd;
 }
-.dark tr:nth-child(even) {
+
+.dark .notice {
     background-color: #333;
 }
