website: Update fonts.
* Update the download URL of Source Serif, and drop "Pro" from the name.

* Work around the issue of the space in Fira Mono being too narrow.

* Tweak the flags to "fonttools subset" to make the fonts slightly smaller.

* Regenerate fonts.css using latest versions of the fonts.

--- a/website/style.css
+++ b/website/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    font-family: "Source Serif Pro", Georgia, serif;
+    font-family: "Source Serif", Georgia, serif;
     font-size: 17px;
     line-height: 1.4em;
 }
