website: Fix reflow on homepage.
Use a <script> at the beginning of <body> to ensure that the demo carousel start
out folded instead of expanded.

--- a/website/home.css
+++ b/website/home.css
@@ -23,11 +23,11 @@
 
 /* Expanded view. */
 
-#demo-container.expanded {
+#demo-container.expanded, body.no-js #demo-container {
   width: 100%;
 }
 
-#demo-container.expanded .demo-wrapper {
+#demo-container.expanded .demo-wrapper, body.no-js #demo-container .demo-wrapper {
   width: 100%;
 }
 
