website: Add anchor link for each header.
This fixes #1426.

--- a/website/style.css
+++ b/website/style.css
@@ -402,6 +402,16 @@ pre.ttyshot, pre.ttyshot code {
     background-color: gray;
 }
 
+/** Header anchors. */
+.anchor {
+    opacity: 0;
+    font-size: 90%;
+}
+
+*:hover > .anchor {
+    opacity: 1;
+}
+
 /**
  * Dark theme.
  */
@@ -467,5 +477,3 @@ td, th {
 .dark td, .dark th {
     border-color: #444;
 }
-
-
