Tweak styling of header anchors.
* Use normal text color.

* Add a small padding-left.

* Also show when parent is :active, for mobile friendliness.

--- a/website/style.css
+++ b/website/style.css
@@ -406,9 +406,11 @@ pre.ttyshot, pre.ttyshot code {
 .anchor {
     opacity: 0;
     font-size: 90%;
+    color: inherit;
+    padding-left: 0.15em;
 }
 
-*:hover > .anchor {
+*:active > .anchor, *:hover > .anchor {
     opacity: 1;
 }
 
