Use onclick="" to make :hover work on mobile.
Anchor link will be shown after clicking the header. Not sure how this works,
but it does work. Seen on https://stackoverflow.com/a/25673064/566659.

--- a/website/style.css
+++ b/website/style.css
@@ -410,7 +410,7 @@ pre.ttyshot, pre.ttyshot code {
     padding-left: 0.15em;
 }
 
-*:active > .anchor, *:hover > .anchor {
+*:hover > .anchor {
     opacity: 1;
 }
 
