website: Overhaul styling.
Also rewrite some texts to fit within the now narrower body.

--- a/website/home/home.css
+++ b/website/home/home.css
@@ -129,13 +129,7 @@ ul#demo-switcher > li > a:hover {
 /* Overriding default styles */
 
 .article h1 {
-  border-bottom: none;
-  padding-bottom: 0;
-}
-
-.article li > p {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  border: none;
 }
 
 /**
